--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,11 +1,13 @@
 ---
 layout: archive
 permalink: /year-archive/
-title: "Blog posts"
+title: "Blog Posts"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
+
+Currently, I am doing a blogging sprint for Summer '24! Expect weekly blogs :)
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
