--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -9,6 +9,8 @@ redirect_from:
 
 Currently, I am doing a blogging sprint for Summer '24! Expect weekly blogs :)
 
+I'm also working on a bigger blogging project with [_nightsweekends S5](https://x.com/_nightsweekends) so expect a big blog? by the time I'm back to MIT in September.
+
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
