--- a/_pages/reading.html
+++ b/_pages/reading.html
@@ -10,7 +10,7 @@ author_profile: false
   <section class="reading-hero">
     <div class="reading-hero__content">
       <h1 class="reading-hero__title">Arthur's Bookshelf</h1>
-      <p class="reading-hero__subtitle">Books that shaped my thinking</p>
+      <p class="reading-hero__subtitle">What I read when the models are training and then pretend to have opinions about</p>
 
       <div class="lucky-buttons">
         <button class="lucky-btn lucky-btn--tbr" onclick="feelingLucky('tbr')">
