--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,19 +1,91 @@
 ---
 layout: archive
 permalink: /year-archive/
-title: "Blog Posts"
+title: "Writing"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
 
 {% include base_path %}
-{% capture written_year %}'None'{% endcapture %}
+
+{% comment %} Collect all unique tags {% endcomment %}
+{% assign all_tags = "" | split: "" %}
 {% for post in site.posts %}
-  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
-  {% include archive-single.html %}
+  {% for tag in post.tags %}
+    {% if tag and tag != "" %}
+      {% unless all_tags contains tag %}
+        {% assign all_tags = all_tags | push: tag %}
+      {% endunless %}
+    {% endif %}
+  {% endfor %}
 {% endfor %}
+{% assign all_tags = all_tags | sort %}
+
+{% if all_tags.size > 0 %}
+<div class="blog-filters">
+  <button class="blog-filter active" data-filter="all">all</button>
+  {% for tag in all_tags %}
+    <button class="blog-filter" data-filter="{{ tag | slugify }}">{{ tag }}</button>
+  {% endfor %}
+</div>
+{% endif %}
+
+<div class="blog-list">
+  {% capture written_year %}'None'{% endcapture %}
+  {% for post in site.posts %}
+    {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+    {% if year != written_year %}
+      <div class="blog-year" data-year="{{ year }}">{{ year }}</div>
+      {% capture written_year %}{{ year }}{% endcapture %}
+    {% endif %}
+    {% include blog-card.html %}
+  {% endfor %}
+</div>
+
+<footer class="blog-acknowledgements">
+  Blog template inspired by <a href="https://www.benkuhn.net/" target="_blank">Ben Kuhn</a>.
+</footer>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const filters = document.querySelectorAll('.blog-filter');
+  const items = document.querySelectorAll('.blog-item');
+  const years = document.querySelectorAll('.blog-year');
+
+  filters.forEach(filter => {
+    filter.addEventListener('click', function() {
+      const selected = this.dataset.filter;
+
+      // Update active state
+      filters.forEach(f => f.classList.remove('active'));
+      this.classList.add('active');
+
+      // Filter items
+      items.forEach(item => {
+        if (selected === 'all') {
+          item.style.display = 'flex';
+        } else {
+          const tags = item.dataset.tags ? item.dataset.tags.split(',') : [];
+          item.style.display = tags.includes(selected) ? 'flex' : 'none';
+        }
+      });
+
+      // Hide empty year headers
+      years.forEach(year => {
+        const yearVal = year.dataset.year;
+        let hasVisible = false;
+        let sibling = year.nextElementSibling;
+        while (sibling && !sibling.classList.contains('blog-year')) {
+          if (sibling.classList.contains('blog-item') && sibling.style.display !== 'none') {
+            hasVisible = true;
+            break;
+          }
+          sibling = sibling.nextElementSibling;
+        }
+        year.style.display = hasVisible ? 'block' : 'none';
+      });
+    });
+  });
+});
+</script>
